# py-alpha-lib

./: .gitignore  .nwa-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
articles/: 001.md
contrib/: alpha101.py  alpha101.txt  alpha101_alphalib.py  alpha101_pandas.py  run_alpha101_alphalib.py  run_alpha101_pandas.py
examples/gtja191/: alpha191.txt  main.py
examples/gtja191/al/: __init__.py  alpha191.py  alpha191_context.py
examples/wq101/: main.py  result.md
examples/wq101/al/: __init__.py
examples/wq101/pd_/: __init__.py  alpha101_adjusted.py
python/: conftest.py
python/alpha/: __init__.py  algo.md
python/alpha/algo/: __init__.py  algo.py  algo_gen.py
python/alpha/lang/: __init__.py  __main__.py  alpha.lark  parser.py  to_python.py
python/tests/: test_grammar.py  test_rank.py  test_talib.py  test_to_python.py
src/: lib.rs
src/algo/: alpha.rs  beta.rs  context.rs  cross.rs  drawdown.rs  ema.rs  error.rs  extremum.rs  ma.rs  mod.rs  quantile.rs  rank.rs  returns.rs  series.rs  sharpe.rs  skip_nan_window.rs  slope.rs  stats.rs  stddev.rs  sum.rs
tests/: rank.py  usage.py  verify_sumif.py
