[package]
name = "alpha"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alpha"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = {version = "0.27.0", features = ["abi3"]}
thiserror = "2"
numpy = "0.27.0"
num-traits = "0.2"
rayon = "1.11"


[build-dependencies]
anyhow = "1"