[package]
name = "alpha"
version = "0.2.4"
edition = "2024"
authors = ["ElseJJ"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alpha"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
pyo3 = { version = "0.28", features = ["abi3"] }
pyo3-log = "0.13"
thiserror = "2"
numpy = "0.28"
num-traits = "0.2"
rayon = "1.11"
log = "0.4"


[build-dependencies]
anyhow = "1"
