[project]
name = "alpha-lib"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "ta-lib>=0.6.8",
]

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "lark>=1.3.1",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
]

[tool.maturin]
python-source = "python"
module-name = "alpha.algo._algo"
features = ["pyo3/extension-module"]
