[project]
name = "alpha-lib"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["pandas==3.0.*"]
readme = "README.md"
description = "Alpha Library: A high-performance rolling window calculation library implemented in Rust with Python bindings. Used for financial data analysis and factor research."
license = { file = "LICENSE" }
authors = [{ name = "LiJia" }]

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "lark>=1.3.1",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scipy>=1.15.3",
    "ta-lib>=0.6.8",
    "tqdm>=4.67.1",
]

[tool.maturin]
python-source = "python"
module-name = "alpha.algo._algo"
features = ["pyo3/extension-module"]
